[package]
name = "aurelian_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
llm = { git = "https://github.com/rustformers/llm", version = "0.2.0-dev" }
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde_json = "1.0.105"
